# simpleCudaMLP

./: .gitignore  CMakeLists.txt  README.md
src/: data_types.h  debug.h  main.cpp
src/NeuralNetwork/: layer.cpp  layer.h  neuralnetwork.cpp  neuralnetwork.h  neuron.cpp  neuron.h
